# yet-another-UI-for-AW

./: .gitignore  .project  DefDB.db  DefEditorApp.ipynb  QtDashBoardApp.ipynb  README.md  aw_ya.bat  aw_ya.command  aw_ya_launcher.py  pyproject.toml  start_ui.bat  start_ui.sh
aw_ya_app/: __main__.py  aw_ya_editor.py  main.py
aw_ya_core/: EventCache.py  EventControler.py  __init__.py  datastore.py  defmodel.py  lib.py  observation.py
aw_ya_core/tests/: test_datastore.py  test_defmodel.py
aw_ya_editor/: ChangeListner.py  EventSelector.py  __init__.py  categoryeditor.py  defeditor.py  itembuilder.py
aw_ya_view/: Dashboard.py  InformationBoard.py  PieChart.py  SinglePieChart.py  SunburstGraph.py  __init__.py  lib.py  timebargraph.py
docs/: USAGE.md
locale/Japanese_Japan/LC_MESSAGES/: aw_ya_editor.po  aw_ya_view.mo  aw_ya_view.po
locale/ja_JP/LC_MESSAGES/: aw_ya_editor.mo
